--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
+  direction: rtl;
+   
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +39,5 @@
     transform: rotate(360deg);
   }
 }
+
+
