basic home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   direction: rtl;
    
@@ -38,6 +38,6 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 
